# PyJAdES

./: .gitignore  README.md  pyjades.ipynb  pyproject.toml
examples/: signed_dock.json  validation_result.json
src/pyjades/: __init__.py
src/pyjades/signing/: __init__.py  jades_signer.py
src/pyjades/utils/: __init__.py  cache_manager.py  downloader.py
src/pyjades/validation/: __init__.py  jades_validator.py
