[build-system]
requires = ["hatchling<=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "pyjades"
version = "0.1.0"

license = { text = "Apache-2.0" }

requires-python = ">=3.8"

description = "A simple Python library for signing and validating JAdES documents"
readme = "README.md"

keywords = ["JAdES", "digital-signature", "cryptography", "certificates"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "cryptography>=41.0.1",
    "requests>=2.31.0"
]

[options]
packages = ["pyjades"]
package_dir = {"" = "src"}  # Указание, что код проекта находится в папке "src"
zip_safe = true

[tool.black]
line-length = 80
target-version = ['py37']
